# vsnlib

./: .gitignore  CMakeLists.txt  README.md  dep.sh
apps/: CmdVStream.cpp  cmdCalib.cpp  cmdCalib_st.cpp  cmdImg.cpp  cmdMarker.cpp  cmdMath.cpp  cmdPoints.cpp  cmdVideo.cpp  vsnTool.cpp
calib/: CMakeLists.txt  calibrate_camera_charuco.cpp  calibration.cpp  camera_calibration.cpp  para_imgs.xml  para_video.xml  readme.md  run.sh  run_bk1.sh  run_calib.sh
data/vsnd/: picam.yml
data/vsnd/cam/: blender_35mm.yml  blender_70mm.yml  c310.yml  iphone8.yml  iphone8_4k.yml  kitti_gray_stereo.json  readme.md  sim_cam.yml
data/vsnd/kitti/: kitti_gray_cam.yml  kitti_gray_stereo.json
data/vsnd/marker/: markers01_cfg.json
data/vsnd/test/cmds/: vstream_clnt.txt  vstream_srvr.txt
data/vsnd/test/kitti/gray/: stereo.json
data/vsnd/test/stereo_td/: cam.yml  stereo.json
inc/ut/: cutil.h
inc/vsn/: cutil.h  eigen_hlpr.h  marker.h  ocv_hlpr.h  pcl_utils.h  vsnLib.h  vsnLibCv.h  vsnTest.h  vsnTool.h
py/aruco/: aruco_gen.py  arucod  marker_boarder.py  markers_bar.py
py/pyvsnlib/: vstream.py
scp/: calib.sh  cam_info.sh  img_picker.sh  run_calib.sh  vid2img.sh  vid_enc.sh  vid_frms.sh  vid_stereo_crop.sh
src/: cam.cpp  cutil.cpp  eigen_hlpr.cpp  feature.cpp  featureCv.cpp  geometry.cpp  img.cpp  imgCv.cpp  inst.cpp  instSegm.cpp  instance.cpp  marker.cpp  ocv_hlpr.cpp  points.cpp  recon3d.cpp  shape.cpp  socket.cpp  stereo.cpp  stereoCv.cpp  stereo_omni.cpp  videoCv.cpp  vsnLib.cpp  vstream.cpp
src/ut/: cmd.cpp  cutil.cpp  log.cpp  socket.cpp  stream.cpp  test.cpp
test/: main.cpp  t_blob.cpp  t_feature.cpp  t_img.cpp  t_inst.cpp  t_instSegm.cpp  t_marker.cpp  t_math.cpp  t_points.cpp  t_points_pcl.cpp  t_socket.cpp  t_stereo.cpp  t_stereo2.cpp  t_stereo_img.cpp
test/py/: t_client.py  t_server.py
